# uuv_fusion

DockerFIles/uuv_sim_base/: Dockerfile
DockerFIles/uuv_sim_base_app/: Dockerfile  simulation-entrypoint.sh
DockerFIles/uuv_sim_base_robot/: Dockerfile  robot-entrypoint.sh
fusion_ws/src/aws_int/: CMakeLists.txt  package.xml  setup.py
fusion_ws/src/aws_int/launch/: aws_int.launch
fusion_ws/src/aws_int/scripts/: run_webserver.sh
fusion_ws/src/fusion_control/config/: inertial.yaml  thruster_manager.yaml
fusion_ws/src/fusion_control/launch/: start_thruster_manager.launch
fusion_ws/src/fusion_description/: package.xml
fusion_ws/src/fusion_description/meshes/: prop-pitch.dae  vehicle.stl
fusion_ws/src/fusion_description/urdf/: snippets.xacro
simulation_ws/src/aws_int/: CMakeLists.txt
simulation_ws/src/aws_int/launch/: aws_int.launch
simulation_ws/src/aws_int/scripts/: api_pull.py
simulation_ws/src/cavr_meshes/auv/: REMUS_old.3ds  REMUS_x_body.3ds  ROV.3ds  glider.3ds  remus_prop.blend  remus_prop.dae  rov.stl
simulation_ws/src/cavr_meshes/boat/: 5086_Boat.3ds  MINI_SOCR.blend  RB.max  SOCR.3DS  SOCR.rar  SOCR_BODY.tga  SOCR_UV.png_bak
simulation_ws/src/cavr_meshes/other/: DIVER5.dae  Diver.3ds  Diver.blend  DiverBubbles.blend  diver.dae  diver.stl
simulation_ws/src/cavr_meshes/other/Minigun/: minigun.blend  minigun.mtl
simulation_ws/src/cavr_meshes/other/Minigun/.svn/: entries
simulation_ws/src/cavr_meshes/other/Minigun/.svn/text-base/: minigun scanline.max.svn-base  minigun.max.svn-base
simulation_ws/src/cavr_meshes/other/Minigun/Textures/.svn/: entries
simulation_ws/src/cavr_meshes/uav/: ScanEagle.3ds  ScanEagle.max  ScanEagle_Orange.3ds  rascal.3ds  rascal.blend  scaneagle.blend  scaneagle.stl  scaneagle_orange.blend  uav.blend  uav.osg
simulation_ws/src/cavr_meshes/usv/: SeaFox.wrl  SeaFox.x3d  seafox.3ds  seafox.blend  seafox.dae  seafox.stl
simulation_ws/src/cavr_msgs/: .gitignore  CMakeLists.txt  package.xml  setup.py
simulation_ws/src/cavr_msgs/action/: DynamicMissionGoals.action  MissionGoal.action  PathGoal.action
simulation_ws/src/cavr_msgs/msg/: ATLAS_Config_Status.msg  ATLAS_Environment.msg  AdaptiveSubmod.msg  Airmar_Triducer.msg  AlticamCmd.msg  BVTPingMeta.msg  CtrlCmd.msg  CtrlErr.msg  CtrlHL.msg  CtrlLL.msg  Edge.msg  Feature.msg  FeatureDB.msg  GSS_Nav_Sol.msg  Graph.msg  Heartbeat.msg  KLV.msg  MapFeature.msg  MapParams.msg  MissionWaypoint.msg  MissionWaypoints.msg  ModemPingLBL.msg  ModemQuery.msg  ModemRange.msg  ModemReplyLBL.msg  NCS_Run.msg  NCS_Solution.msg  NavSatFixAug.msg  Node.msg  ObsAvoid.msg  Odometry.msg  Partition.msg  Path.msg  PointWithCovarianceStamped.msg  RTWDebug.msg  RawFeature.msg  RemusADCP.msg  RemusAcommsRangerCcl.msg  RemusBattery.msg  RemusCTD.msg  (+43 more)
simulation_ws/src/cavr_msgs/msg/SeeByte/: CTD.msg  Environmental.msg  GlobalPosition.msg  LatLon.msg  Metadata.msg  Pose.msg
simulation_ws/src/cavr_msgs/src/cavr_msgs/: .gitignore  cavr_msgs_utils.py
simulation_ws/src/cavr_msgs/srv/: CoveragePlannerQuery.srv  FeatureMapQuery.srv  PFMapQuery.srv  TopoMapQuery.srv
simulation_ws/src/cavr_utils/: .gitignore  CMakeLists.txt  package.xml  setup.py
simulation_ws/src/cavr_utils/include/cavr_utils/: LatLonUTMConv.h  cavr_utils.hpp  system_utils.hpp
simulation_ws/src/cavr_utils/launch/: extract_images.launch  remus.sh  scan_eagle.machine  scan_eagle.sh  seafox.sh  system_topics.launch  vlbv.sh
simulation_ws/src/cavr_utils/src/: LatLonUTMConv.cpp  cavr_utils.cpp
simulation_ws/src/cavr_utils/src/cavr_utils/: est_utils.py  feature_utils.py  geometry_utils.py  mission_utils.py  pid.py  seafox_config.py  seafox_utils.py  system_utils.py  topo_path_utils.py
simulation_ws/src/fusion_control/: CMakeLists.txt  package.xml
simulation_ws/src/fusion_control/config/: TAM.yaml
simulation_ws/src/fusion_control/launch/: joy_wrench.launch
simulation_ws/src/fusion_description/: CMakeLists.txt
simulation_ws/src/fusion_description/launch/: upload.launch
simulation_ws/src/fusion_description/meshes/: prop-port.dae  prop-star.dae
simulation_ws/src/fusion_description/robots/: default.xacro
simulation_ws/src/fusion_description/urdf/: actuators.xacro  base.xacro  gazebo.xacro  sensors.xacro
simulation_ws/src/ros_msg_converter/: CMakeLists.txt  package.xml
simulation_ws/src/ros_msg_converter/launch/: ros_msg_converter_fusion.launch  ros_msg_converter_remus.launch
simulation_ws/src/ros_msg_converter/src/: .ros_msg_converter.py.swo  ros_msg_converter_fusion.py  ros_msg_converter_remus.py
